2.0.14
  - enhancement: ability to connect to irc servers with password protection
    using 'password' setting in 'irc' section of default.ini
  - enhancement: pipe codes for colors/modes are now supported in ircchat.py.
2.0.13
  - bugfix: previously the 'stop/more/continuous' prompt was not pausing news
    output in the appropriate place. prompt_pager also deals with wrapped lines
    much better now.
  - bugfix: OpenSSL has changed a method signature in their library, which
    broke the versions of cffi and cryptography x84 relies on. increased the
    required versions of these libraries.
2.0.12
  - enhancement: [system] option scriptpath now supports a comma
    separated list of directories in which customizations are stored.
2.0.11
  - bugfix: weather.py fix incorrect postal code return from Accu Weather.
    Changed the default to populate search by city/state instead of
    postal since this is no longer returned from accu weather correctly.
    Also re-added missing save location field that was outside of
    while loop to funtion exit.
  - bugfix: tetris.py fix for sending terminal font sequence prior to
    ansi screen display instead of after.
2.0.10
  - bugfix: display updates when posting to oneliners, issue #235

2.0.9
  - bugfix: profile.py now accepts a target handle as an optional
    argument to its main() function, so online.py can successfully
    launch the profile editor for online users.
2.0.8
  - bugfix: Fixed a nasty Return value bug in vote.py that could
    cause a database failure.
  - bugfix: XML element tag name in weather.py AccuWeather response now
    includes namespace
  - bugfix: Refresh screen error in msgarea.py
  - workaround: always force refresh on event 'gosub' as terminal clients
    such as syncterm, netrunner, and etherterm do not support the
    "alt screen" sequence well, or at all.
  - sometimes (when TERM is 'ansi') sesame doors did not run.
2.0.7
  - bugfix: ValueError in profile.py for setting bad timeout value